# PeekingDuckReborn

./: .gitignore  LICENSE.txt  NOTICE.txt  README.md  __main__.py  cicd_requirements.txt  lint_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: SECURITY.md
peekingduck/: __init__.py  cli.py  config_loader.py  declarative_loader.py  runner.py
peekingduck/commands/: __init__.py  core.py  create_node.py  create_node_helper.py  nodes.py
peekingduck/configs/dabble/: bot_sort.yml
peekingduck/configs/model/: rt_detr.yml  vit_pose.yml  yolox.yml
peekingduck/configs/output/: csv_writer.yml  media_writer.yml  screen.yml
peekingduck/pipeline/: __init__.py  pipeline.py
peekingduck/pipeline/nodes/: __init__.py  abstract_node.py  base.py  node.py  node_template.py
peekingduck/pipeline/nodes/augment/: __init__.py  brightness.py  contrast.py  undistort.py
peekingduck/pipeline/nodes/dabble/: __init__.py  bbox_count.py  bbox_to_3d_loc.py  bbox_to_btm_midpoint.py  bot_sort.py  camera_calibration.py  check_large_groups.py  check_nearby_objs.py  fps.py  group_nearby_objs.py  keypoints_to_3d_loc.py  statistics.py  tracking.py
peekingduck/pipeline/nodes/draw/: __init__.py  bbox.py  blur_bbox.py  btm_midpoint.py  group_bbox_and_tag.py  heat_map.py  instance_mask.py  legend.py  mosaic_bbox.py  poses.py  tag.py  zones.py
peekingduck/pipeline/nodes/input/: __init__.py  visual.py
peekingduck/pipeline/nodes/model/: __init__.py  csrnet.py  efficientdet.py  fairmot.py  hrnet.py  jde.py  mask_rcnn.py  movenet.py  mtcnn.py  posenet.py  rt_detr.py  vit_pose.py  yolact_edge.py  yolo.py  yolo_face.py  yolo_license_plate.py  yolox.py
peekingduck/pipeline/nodes/output/: __init__.py  csv_writer.py  media_writer.py  screen.py
peekingduck/pipeline/utils/: __init__.py
peekingduck/pipeline/utils/bbox/: __init__.py  transforms.py
peekingduck/pipeline/utils/keypoint/: __init__.py  transforms.py
peekingduck/pipeline/utils/keypoint_conn/: transforms.py
peekingduck/utils/: __init__.py  deprecation.py  detect_id_mapper.py  graph_functions.py  logger.py  requirement_checker.py
peekingduck/viewer/: __init__.py  playlist.py  single_column_view.py  viewer.py  viewer_gui.py  viewer_utils.py
tests/: conftest.py
tests/cli/: test_cli.py  test_core.py  test_create_node.py  test_nodes.py
tests/data/video_sequences/three_people_crossing/: detections.yml
tests/loaders/: test_config_loader.py  test_declarative_loader.py
tests/module_import/: test_module_import.py
tests/pipeline/: test_pipeline.py
tests/pipeline/nodes/: test_node.py
tests/pipeline/nodes/augment/: test_brightness.py  test_contrast.py  test_undistort.py
tests/pipeline/nodes/base/: test_threshold_checker_mixin.py  test_weights_downloader_mixin.py
tests/pipeline/nodes/dabble/: test_bbox_count.py  test_bbox_to_3d_loc.py  test_bbox_to_btm_midpoint.py  test_bot_sort.py  test_camera_calibration.py  test_check_large_groups.py  test_check_nearby_objs.py  test_fps.py  test_group_nearby_objs.py  test_keypoints_to_3d_loc.py  test_statistics.py  test_tracking.py  test_zone_count.py
tests/pipeline/nodes/draw/: test_bbox.py  test_blur_bbox.py  (+9 more)
tests/utils/: test_requirement_checker.py
(+151 files in other folders)
