[metadata]
name = peekingduck
version = attr: peekingduck.__version__
url = https://github.com/natsunoyuki/PeekingDuckX
author = 'AI Singapore, Natsunoyuki AI Laboratory'
author_email = cvhub-ext@aisingapore.org
keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
description = Modernized modular framework built to simplify Computer Vision inference workloads.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml
    click
    requests
    opencv-python
    protobuf
    numpy
    tqdm
    colorama
    torch
    torchvision
    typeguard
    tensorflow
    scipy
    shapely
    lapx
include_package_data = True

# Optional Requirements that can be configured how pip behaves in circumstances
# TBD: Different extras for `full` and `edge`
# [options.extras_require]
# geocode = geopy

[options.package_data]
* =
    configs/*/*.yml
    configs/node_template.yml
    optional_requirements.txt
    pipeline/nodes/model/master_map.yml
    viewer/PeekingDuckLogo.png

[options.packages.find]
include = peekingduck, peekingduck.*

[options.entry_points]
console_scripts =
    peekingduck = peekingduck.cli:cli
