[metadata]
name = peekingduck
version = attr: peekingduck.__version__
url = https://github.com/natsunoyuki/PeekingDuckX
author = 'AI Singapore, Natsunoyuki AI Laboratory'
author_email = ""
keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
description = Modernized modular framework built to simplify Computer Vision inference workloads.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.10
install_requires =
    dotenv
    pyyaml
    click
    requests
    opencv-python
    protobuf
    numpy
    tqdm
    colorama
    torch
    torchvision
    transformers
    typeguard
    tensorflow
    scipy
    shapely
    lapx
    bot_sort @ git+https://github.com/natsunoyuki/BoT-SORT
include_package_data = True

[options.extras_require]
test = 
    pytest
    pytest-lazy-fixtures
    scikit-image
pip-audit = 
    pip-audit

[options.package_data]
* =
    configs/*/*.yml
    configs/node_template.yml
    optional_requirements.txt
    pipeline/nodes/model/master_map.yml
    viewer/PeekingDuckLogo.png

[options.packages.find]
include = peekingduck, peekingduck.*

[options.entry_points]
console_scripts =
    peekingduck = peekingduck.cli:cli
